[gd_scene load_steps=9 format=4 uid="uid://cyes12nssrosk"]

[ext_resource type="Script" uid="uid://ced76jymvl88h" path="res://scripts/systems/battlefield.gd" id="1_ef5ss"]
[ext_resource type="Texture2D" uid="uid://bwkkck3ha2un6" path="res://assets/hex-tiles.png" id="2_3r7n4"]
[ext_resource type="Script" uid="uid://dgkq7e62gffgj" path="res://scripts/systems/scheduler.gd" id="2_rvub0"]
[ext_resource type="Script" uid="uid://e40xi0mffnd0" path="res://scripts/systems/overlays/movement_overlay.gd" id="3_3r7n4"]
[ext_resource type="Texture2D" uid="uid://gd6yqlpg7x4m" path="res://assets/hover.png" id="3_ychty"]
[ext_resource type="Script" uid="uid://v31xr54v5nit" path="res://scripts/systems/board_controller.gd" id="6_lb0k6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5ebdo"]
texture = ExtResource("2_3r7n4")
margins = Vector2i(0, 5)
texture_region_size = Vector2i(64, 54)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vqaso"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(64, 54)
sources/1 = SubResource("TileSetAtlasSource_5ebdo")

[node name="Battlefield" type="Node2D"]
script = ExtResource("1_ef5ss")

[node name="BoardController" type="Node" parent="."]
script = ExtResource("6_lb0k6")
metadata/_custom_type_script = "uid://v31xr54v5nit"

[node name="Scheduler" type="Node" parent="."]
script = ExtResource("2_rvub0")
metadata/_custom_type_script = "uid://dgkq7e62gffgj"

[node name="MovementOverlay" type="Node" parent="." node_paths=PackedStringArray("overlay_layer")]
script = ExtResource("3_3r7n4")
overlay_layer = NodePath("MovementOverlayLayer")
metadata/_custom_type_script = "uid://e40xi0mffnd0"

[node name="MovementOverlayLayer" type="TileMapLayer" parent="MovementOverlay"]
modulate = Color(1, 0.5019608, 0, 0.5019608)
tile_set = SubResource("TileSet_vqaso")
occlusion_enabled = false
rendering_quadrant_size = 1

[node name="TileMarkers" type="Node" parent="."]

[node name="Marker" type="Sprite2D" parent="TileMarkers"]
modulate = Color(1, 1, 1, 0.2509804)
position = Vector2(559, 325)
texture = ExtResource("3_ychty")

[node name="SelectedUnitMarker" type="Sprite2D" parent="TileMarkers"]
modulate = Color(1, 1, 1, 0.2509804)
position = Vector2(559, 325)
texture = ExtResource("3_ychty")

[node name="CurrentUnitMarker" type="Sprite2D" parent="TileMarkers"]
modulate = Color(0.45410198, 0.5364821, 1.137, 0.651)
position = Vector2(559, 325)
texture = ExtResource("3_ychty")

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAALAAUAAQAAAAAAAAALAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAJAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAALAAYAAQAAAAAAAAAMAAYAAQAAAAAAAAANAAUAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAQAAQAAAAAAAAALAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAALAAcAAQAAAAAAAAAMAAcAAQAAAAAAAAANAAYAAQAAAAAAAAANAAQAAQAAAAAAAAAKAAgAAQAAAAAAAAALAAgAAQAAAAAAAAAMAAgAAQAAAAAAAAANAAcAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAQAAQAAAAAAAAANAAMAAQAAAAAAAAAMAAMAAQAAAAAAAAALAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAIAAgAAQAAAAAAAAAJAAgAAQAAAAAAAAAKAAkAAQAAAAAAAAAMAAkAAQAAAAAAAAANAAgAAQAAAAAAAAAOAAgAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAQAAQAAAAAAAAAOAAMAAQAAAAAAAAANAAIAAQAAAAAAAAAMAAIAAQAAAAAAAAALAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAQAAQAAAAAAAAAHAAcAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAMAAQAAAAAAAAALAAkAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_vqaso")
occlusion_enabled = false
rendering_quadrant_size = 1

[node name="MapData" type="VBoxContainer" parent="."]
offset_right = 55.0
offset_bottom = 50.0

[node name="Offset" type="Label" parent="MapData"]
layout_mode = 2
text = "(0, 0, 0)"

[node name="Cube" type="Label" parent="MapData"]
layout_mode = 2
text = "(0, 0)"

[node name="SelectedUnitLabel" type="Label" parent="MapData"]
layout_mode = 2
text = "-1"

[node name="CurrentUnitLabel" type="Label" parent="MapData"]
layout_mode = 2
text = "-1"
